# ev_rgb_annotation

./: .gitignore  README.md  annotation.sh  packages.repos  recording.sh  requirements.txt
cpp/events_to_img/: CMakeLists.txt  events_to_img.cpp
cpp/metavision_file_to_img/: CMakeLists.txt  metavision_file_to_img.cpp
python/: calibration.yaml  convert_labels.py  homography.py  homography_matrix.yaml  match_dataset.py  track.py
python/debug/: event_info.py  label_check.py
python/rvt/: preprocess_dataset.py  representations.py  scripts.sh
python/rvt/conf_preprocess/extraction/: const_duration_10.yaml  const_duration_100.yaml  const_duration_20.yaml  const_duration_33.yaml  const_duration_5.yaml  const_duration_50.yaml
python/rvt/conf_preprocess/representation/: event_frame.yaml
ros2_ws/src/calibration_launch/: CMakeLists.txt  package.xml
ros2_ws/src/calibration_launch/launch/: calibration.launch.xml
ros2_ws/src/create_ros2bag/: CMakeLists.txt  package.xml
ros2_ws/src/create_ros2bag/config/: params.yaml
ros2_ws/src/create_ros2bag/launch/: bag_creater.launch.xml
ros2_ws/src/create_ros2bag/src/: create_ros2_bag.cpp
